--- a/src/app/components/multi-card/multi-card.component.html
+++ b/src/app/components/multi-card/multi-card.component.html
@@ -41,11 +41,10 @@
             </div>
 
             <div class="row">
-                @for (form of formsArray.controls; let index = $index; track form) {
+                @for (form of formsArray.controls; track form) {
                     <app-card
                         class="col-sm-6 col-md-4 col-lg-3 mb-4"
                         [form]="form"
-                        [index]="index"
                         (remove)="removeForm($event)"
                     />
                 }
